@@ -47,6 +47,7 @@ export(loc_split)
 export(lookup)
 export(lookup_e)
 export(matrix2df)
+export(matrix2long)
 export(mtabulate)
 export(pad)
 export(repo2github)
